# research

./: .gitignore  main.py  pyproject.toml
.helix/: languages.toml
benchmark/: __init__.py  base.py  elliptic_txtx.py  epinions.py  reddit_body.py  tgcn_elliptic_txtx.py  tgcn_epinions.py  tgcn_redditbody.py
dataset_statistic/: eplliptic_txtx.py
research/: base.py  loader.py
research/compute/: __init__.py  cache_manager.py
research/data/: __init__.py  base.py  loader.py
research/data/dataset/: __init__.py  base.py  elliptic.py  reddit_hyperlink.py
research/dataset/: __init__.py  base.py  elliptic.py  epinions.py  eplliptic.py  reddit-body.py  reddit_hyperlink.py
research/model/: __init__.py  tgcn.py
research/model/layer/: __init__.py  gcn.py
research/snapshot_loader/: __init__.py  snapshot_loader.py
research/transform/: __init__.py  edge_life.py
research/utils/: __init__.py  download.py  subgraph.py
statistic/: elliptic_txtx.py  function.py  reddit_body.py
